syntax = "proto3";

package ticker;

service TickerApi {
    rpc GetAll (Empty) returns (Tickers) {}
    rpc Create (Ticker) returns (Ticker) {}
    rpc Get (TickerId) returns (Ticker) {}
}

message TickerId {
    string id = 1;
}

message TickerSymbol {
    string symbol = 1;
}

message Empty { }

message Ticker {
    string id = 1;
    string symbol = 2;
    optional string quote_symbol = 3;
    string market_id = 4;
}

message Tickers {
    repeated Ticker tickers = 1;
}
